# thinkbooster

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: lint.yml  test.yml
config/dataset/: kernelbench.yaml
config/experiments/adaptive_scaling/gpqa_diamond/: adaptive_scaling_vllm_qwen3_8b_gpqa_diamond_entropy.yaml  adaptive_scaling_vllm_qwen3_8b_gpqa_diamond_perplexity.yaml  adaptive_scaling_vllm_qwen3_8b_gpqa_diamond_sequence_prob.yaml
config/experiments/adaptive_scaling/human_eval_plus/: adaptive_scaling_k2think_human_eval_plus_prm.yaml  adaptive_scaling_openrouter_claude_sonnet4_human_eval_plus_prm.yaml  adaptive_scaling_openrouter_gptoss120b_human_eval_plus_prm.yaml  adaptive_scaling_vllm_qwen3_8b_human_eval_plus_prm.yaml
config/experiments/adaptive_scaling/math500/: adaptive_scaling_vllm_qwen25_math_7b_instruct_math500_uhead_vllm.yaml
config/experiments/adaptive_scaling/mbpp_plus/: adaptive_scaling_k2think_mbpp_plus_prm.yaml  adaptive_scaling_openrouter_claude_sonnet4_mbpp_plus_prm.yaml  adaptive_scaling_openrouter_gptoss120b_mbpp_plus_prm.yaml  adaptive_scaling_vllm_qwen3_8b_mbpp_plus_prm.yaml
config/experiments/adaptive_scaling/minerva_math/: adaptive_scaling_vllm_qwen25_math_7b_instruct_minerva_math_entropy.yaml  adaptive_scaling_vllm_qwen25_math_7b_instruct_minerva_math_perplexity.yaml  adaptive_scaling_vllm_qwen25_math_7b_instruct_minerva_math_sequence_prob.yaml
config/experiments/beam_search/gpqa_diamond/: beam_search_vllm_gpt_oss_120b_gpqa_diamond_prm.yaml  beam_search_vllm_thinking_qwen3_8b_gpqa_diamond_llm_critic.yaml
config/experiments/beam_search/human_eval_plus/: beam_search_openrouter_gptoss120b_human_eval_plus_prm.yaml  beam_search_vllm_gpt_oss_120b_human_eval_plus_prm.yaml
config/experiments/beam_search/math500/: beam_search_openrouter_gpt4o_mini_math500_entropy.yaml
config/experiments/beam_search/mbpp_plus/: beam_search_openrouter_gptoss120b_mbpp_plus_prm.yaml  beam_search_vllm_gpt_oss_120b_mbpp_plus_prm.yaml
config/experiments/extended_thinking/human_eval_plus/: extended_thinking_vllm_thinking_qwen3_8b_human_eval_plus.yaml
config/experiments/extended_thinking/mbpp_plus/: extended_thinking_vllm_thinking_qwen3_8b_mbpp_plus.yaml
config/experiments/offline_best_of_n/aime2024/: offline_bon_vllm_thinking_qwen3_8b_aime2024_prm.yaml
config/experiments/offline_best_of_n/aime2025/: offline_bon_vllm_thinking_qwen3_8b_aime2025_prm.yaml
config/experiments/offline_best_of_n/amc23/: offline_bon_vllm_qwen25_math_7b_instruct_amc23_prm.yaml
config/experiments/offline_best_of_n/gaokao2023en/: offline_bon_vllm_qwen25_math_7b_instruct_gaokao2023en_prm.yaml
config/experiments/offline_best_of_n/gpqa_diamond/: offline_bon_openai_gpt4o_mini_gpqa_diamond_prm.yaml  offline_bon_vllm_gpt_oss_120b_gpqa_diamond_prm.yaml
config/experiments/offline_best_of_n/human_eval_plus/: offline_bon_k2think_human_eval_plus_prm.yaml  offline_bon_openrouter_claude_sonnet4_human_eval_plus_prm.yaml  (+4 more)
config/scorer/: llm_critic.yaml  uhead_vllm.yaml
docs/: CONTRIBUTING.md
docs/integrations/: TELEGRAM.md
docs/service/: SERVICE_API_GUIDE.md
llm_tts/datasets/: kernelbench.py
llm_tts/datasets/kernelact/: prompts_kb.py  prompts_v2.py  utils.py  utils_inference.py
llm_tts/evaluation/: exact_match.py  grader.py
llm_tts/generators/: api.py  base.py  vllm.py
llm_tts/scorers/: __init__.py  step_scorer_llm_critic.py  step_scorer_prm.py
llm_tts/step_boundary_detectors/thinking/: marker.py
llm_tts/strategies/: __init__.py  adaptive_scaling_best_of_n.py  phi.py  strategy_base.py  strategy_beam_search.py  strategy_offline_best_of_n.py  strategy_online_best_of_n.py  strategy_self_consistency.py
llm_tts/utils/: __init__.py  telegram.py  telegram_bot.py
notebooks/: wandb_results_analysis.ipynb
presentation/: experiment_visualization_plan.md
reports/: garbage_analysis_with_llm.md  model_capabilities_probe.md
scripts/: README_debugger.md  analyze_candidates.py  analyze_garbage_generation.py  convert_results_to_debugger.py  generate_cached_examples.py  probe_model_capabilities.py  reeval.py  run_tts_eval.py
scripts/local/: submit.sh
service_app/: .env.example  README.md  main.py
service_app/api/models/: openai_compat.py
service_app/api/routes/: chat.py  debugger.py
service_app/core/: config.py  debugger_events.py  strategy_manager.py  visual_debugger_demo.py
service_app/static/: DEPLOY.md
service_app/static/debugger/: app.js  cached_examples.json  index.html  styles.css
service_app/static/home/: index.html  styles.css
tests/service_app/: conftest.py  test_chat_completions.py  test_chat_streaming.py  test_debugger.py  test_debugger_events.py  test_health.py  test_integration.py  test_models.py  test_prm_scorer.py  test_strategy_manager.py
(+97 files in other folders)
