[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tts-service"
version = "0.1.0"
description = "LLM Test-Time Scaling strategies for improved reasoning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["llm", "reasoning", "test-time-scaling", "best-of-n", "reasoning-evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.9.0",
    "transformers>=4.56.0",  # vLLM 0.12.0+ requires ALLOWED_LAYER_TYPES from transformers
    "datasets>=2.14.0",  # HuggingFace datasets for loading benchmarks
    "numpy>=1.21.0,<2.0.0",  # numpy 2.x breaks thinc/spacy compatibility
    "tqdm>=4.64.0",
    "parse>=1.19.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "python-dotenv>=0.19.0",
    # "lm-polygraph>=0.0.1",  # Installed separately via setup.sh (dev branch)
    "pylatexenc>=2.10",
    "sympy>=1.12",  # For Game of 24 answer validation and LaTeX parsing
    # latex2sympy2 installed separately with --no-deps due to antlr4 version conflict with hydra
    "regex>=2023.0.0",  # For advanced regex in grader
    "plotly>=5.0.0",  # For interactive reasoning visualization
    "word2number>=1.1",  # For converting word numbers to digits in math normalization
    "wandb>=0.15.0",  # Weights & Biases for experiment tracking
    "evalplus>=0.3.1",  # EvalPlus for MBPP+/HumanEval+ dataset loading and evaluation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort==7.0.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

service = [
    # FastAPI Service Dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-json-logger>=2.0.7",
]

vllm = [
    # vLLM backend for fast inference with PagedAttention
    # Pin to 0.12.x - vLLM 0.13.0+ requires numpy>=2.0 which breaks thinc/spacy
    "vllm>=0.12.0,<0.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-tts-service"
Repository = "https://github.com/yourusername/llm-tts-service"
Issues = "https://github.com/yourusername/llm-tts-service/issues"

[project.scripts]
run-tts-eval = "scripts.run_tts_eval:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_tts*", "service_app*"]

[tool.setuptools.package-data]
"llm_tts" = ["config/**/*.yaml", "config/**/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | latex2sympy
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["llm_tts"]
skip = ["llm_tts/evaluation/latex2sympy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lm_polygraph.*",
    "parse.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests requiring real API calls and keys",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-m", "not integration",
    "--cov=llm_tts",
    "--cov=service_app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["llm_tts", "service_app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
